feat: unify service requests and reactive provider assignment